--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ default: &default
 
 development:
   <<: *default
-  database: sha_project
+  database: sha_project1
 
 test:
   <<: *default
-  database: sha_project_test
+  database: sha_project_test1
